--- a/configs/launch_configs/launch_config.yml
+++ b/configs/launch_configs/launch_config.yml
@@ -5,6 +5,7 @@ output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases\DataFee
 entities:
   - GICS_GICS
   - Symbol_GVKeyEnhanced
+  - Symbol_GVKeySymbol
   - Symbol_DandBSymbol
   - KeyDev_FutureEvent
   - KeyDev_FutureEventToObjectToEventType
@@ -12,10 +13,11 @@ entities:
   - FutureEventMkt_FutureEventMktSplitInfo
   - FutureEventMkt_FutureEventMktToObjectToEventType  
 
+
 src_views_ents:  # for views have to create another set of names due to naming inconsistencies
   - GICS_GICS 
-  - Symbol_GVKey 
   - Symbol_GVKeyEnhanced
+  - Symbol_GVKeySymbol
   - Symbol_DandB
   - KeyDev_FutureEvent
   - KeyDev_FutureEventToObjectToEventType
@@ -33,8 +35,8 @@ code_replacements:
 - re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany_tbl\]?
   replace_to: dbo.Universe_Company2_tbl
 - re_replace_this: \bCIQDataSnapshot\.
-  replace_to: CIQData
-- re_replace_this: \bCREATE\s+VIEW\s
+  replace_to: CIQData.
+- re_replace_this: \bCREATE\s+VIEW\s+
   replace_to: "CREATE or ALTER VIEW "
 
 
