mounted table  cloning to main module

--- a/configs/launch_configs/launch_config_views.yml
+++ b/configs/launch_configs/launch_config_views.yml
@@ -15,7 +15,9 @@ entities:
 
 
 stages:
-  - CLONE_VIEW
+  - CLONE_STG_TABLE
+  - CLONE_TABLE
+  # - CLONE_VIEW
 
 code_replacements:
 - re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany_tbl\]?
