--- a/configs/launch_configs/launch_config.yml
+++ b/configs/launch_configs/launch_config.yml
@@ -3,70 +3,66 @@ input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeed
 output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases\DataFeedEngineMI'
 
 entities:
-   - 'GICS_GICS'
-   - 'RefData_SubTypeToGIC'
-   - 'Symbol_DandBSymbol'
-   - 'KeyDev_FutureEvent'
-   - 'RefData_KeyDevEventType'
-   - 'RefData_KeyDevObjectRoleType'
-   - 'RefData_KeyDevStatus'
-   - 'KeyDev_FutureEventToObjectToEventType'
-   - 'FutureEventMkt_FutureEventMkt'
-   - 'RefData_KeyDevEventType'
-   - 'RefData_KeyDevObjectRoleType'
-   - 'FutureEventMkt_FutureEventMktSplitInfo'
-   - 'RefData_KeyDevStatus'
-   - 'FutureEventMkt_FutureEventMktToObjectToEventType'
-   - 'KeyDev_KeyDev'
-   - 'RefData_KeyDevEventType'
-   - 'RefData_KeyDevObjectRoleType'
-   - 'RefData_KeyDevStatus'
-   - 'KeyDev_KeyDevToObjectToEventType'
-   - 'AddtlCompany_Address'
-   - 'RefData_AddressType'
-   - 'AddtlCompany_BusinessDescription'
-   - 'AddtlCompany_LongBusinessDescription'
-   - 'refdata_compensationtype'
-   - 'Professional_PersonProfessional'
-   - 'Professional_PersonProfessionalCompensation'
-   - 'KeyDevPlus_KeyDev'
-   - 'RefData_KeyDevEventType'
-   - 'RefData_KeyDevObjectRoleType'
-   - 'RefData_KeyDevStatus'
-   - 'KeyDevPlus_KeyDevToObjectToEventType'
-   - 'RefData_CharType'
-   - 'CompanyBiteSize_CompanyBiteSize'
-   - 'RefData_CharType'
-   - 'RefData_CharTypeToSubType'
-   - 'CompanyIndOfInt_CompanyIndustriesOfInterest'
-   - 'RefData_CharType'
-   - 'RefData_CharTypeToSubType'
-   - 'CompanyGeosOfInt_CompanyGeosOfInterest'
-   - 'RefData_CharType'
-   - 'RefData_CharTypeToSubType'
-   - 'CompanyStagesOfInt_CompanyStagesOfInterest'
-   - 'CompDetail_CompensationAdjustment'
-   - 'refdata_CompensationAdjustmentType'
-   - 'CompDetail_CompensationDetail'
-   - 'RefData_CompensationSubType'
 
+  - refdata_CompensationAdjustmentType
+  - RefData_CompensationSubType
+  - refdata_compensationtype
+  - RefData_SubTypeToGIC
 
-src_views_ents: []  # for views have to create another set of names due to naming inconsistencies
-   
+  - RefData_KeyDevEventType
+  - RefData_KeyDevObjectRoleType
+
+  - RefData_AddressType
+
+  - RefData_CharType
+  - RefData_CharTypeToSubType
+
+src_views_ents: 
+  # for views have to create another set of names due to naming inconsistencies
+  - AddtlCompany_Address
+  - AddtlCompany_BusinessDescription
+  - AddtlCompany_LongBusinessDescription
+  - CompanyBiteSize_CompanyBiteSize
+  - CompanyGeosOfInt_CompanyGeosOfInterest
+  - CompanyIndOfInt_CompanyIndustriesOfInterest
+  - CompanyStagesOfInt_CompanyStagesOfInterest
+  - GICS_GICS
+  - KeyDev_FutureEvent
+  - KeyDev_FutureEventToObjectToEventType
+  - KeyDev_KeyDev
+  - KeyDev_KeyDevToObjectToEventType
+  - Professional_PersonProfessionalCompensation
+  - Professional_PersonProfessional
+  - refdata_CompensationAdjustmentType
+  - RefData_CompensationSubType
+  - refdata_compensationtype
+  - RefData_SubTypeToGIC
+  - Symbol_DandB
+  - RefData_KeyDevEventType
+  - RefData_KeyDevObjectRoleType
+  - KeyDev_FutureEventMkt
+  - KeyDev_FutureEventMktSplitInfo
+  - KeyDev_FutureEventMktToObjectToEventType
+  - RefData_AddressType
+  - KeyDev_KeyDevPlus
+  - KeyDev_KeyDevToObjectToEventType
+  - RefData_CharType
+  - RefData_CharTypeToSubType
+  - Professional_CompensationAdjustment
+  - Professional_CompensationDetail
 stages:
-  #- CLONE_TABLE
-  # - CLONE_STG_TABLE
-  - CLONE_VIEW
-  #- CREATE_MERGE_SP
-  #- CREATE_PULL_SP
+#- CLONE_TABLE
+#  - CLONE_STG_TABLE
+  #- CLONE_VIEW
+  - CREATE_MERGE_SP
+  - CREATE_PULL_SP
 
 code_replacements:
 - re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany_tbl\]?
   replace_to: dbo.Universe_Company2_tbl
 - re_replace_this: \bCIQDataSnapshot\.
   replace_to: CIQData.
-- re_replace_this: \bCREATE\s+VIEW\s+
-  replace_to: "CREATE or ALTER VIEW "
+
 
 
 
