--- a/configs/launch_configs/launch_config_views.yml
+++ b/configs/launch_configs/launch_config_views.yml
@@ -3,29 +3,21 @@ input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeed
 output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases\DataFeedEngineMI'
 
 entities:
-  - GICS_GICS
-  - Symbol_GVKeyEnhanced
-  - Symbol_GVKeySymbol
-  - Symbol_DandBSymbol
-  - KeyDev_FutureEvent
-  - KeyDev_FutureEventToObjectToEventType
-  - FutureEventMkt_FutureEventMkt
-  - FutureEventMkt_FutureEventMktSplitInfo
-  - FutureEventMkt_FutureEventMktToObjectToEventType  
+  - Professional_CompensationAdjustment
+  # - Professional_CompensationDetail
 
 
 stages:
-  - CLONE_STG_TABLE
-  - CLONE_TABLE
-  # - CLONE_VIEW
+  #- CLONE_STG_TABLE
+  #- CLONE_TABLE
+   - CLONE_VIEW
 
 code_replacements:
 - re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany_tbl\]?
   replace_to: dbo.Universe_Company2_tbl
 - re_replace_this: \bCIQDataSnapshot\.
   replace_to: CIQData.
-- re_replace_this: \bCREATE\s+VIEW\s+
-  replace_to: "CREATE or ALTER VIEW "
+
 
 
 
