--- a/configs/launch_configs/launch_config.yml
+++ b/configs/launch_configs/launch_config.yml
@@ -1,61 +1,36 @@
 
 input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeedEngineMI2\dbo'
-output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases\DataFeedEngineMI'
+output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases'
 
 entities:
-
-  - refdata_CompensationAdjustmentType
-  - RefData_CompensationSubType
-  - refdata_compensationtype
-  - RefData_SubTypeToGIC
-
-  - RefData_KeyDevEventType
-  - RefData_KeyDevObjectRoleType
-
-  - RefData_AddressType
-
-  - RefData_CharType
-  - RefData_CharTypeToSubType
+  - Professional_Compensation
+  - RefData_committee
+  - RefData_CompensationType
+  - Professional_Person
+  - Professional_BiographyPerson
+  - Professional_Professional
+  - Professional_ProfessionalCoverage
+  - RefData_ProFunction
+  - Professional_ProToProFunction
 
 src_views_ents: 
   # for views have to create another set of names due to naming inconsistencies
-  - AddtlCompany_Address
-  - AddtlCompany_BusinessDescription
-  - AddtlCompany_LongBusinessDescription
-  - CompanyBiteSize_CompanyBiteSize
-  - CompanyGeosOfInt_CompanyGeosOfInterest
-  - CompanyIndOfInt_CompanyIndustriesOfInterest
-  - CompanyStagesOfInt_CompanyStagesOfInterest
-  - GICS_GICS
-  - KeyDev_FutureEvent
-  - KeyDev_FutureEventToObjectToEventType
-  - KeyDev_KeyDev
-  - KeyDev_KeyDevToObjectToEventType
-  - Professional_PersonProfessionalCompensation
-  - Professional_PersonProfessional
-  - refdata_CompensationAdjustmentType
-  - RefData_CompensationSubType
-  - refdata_compensationtype
-  - RefData_SubTypeToGIC
-  - Symbol_DandB
-  - RefData_KeyDevEventType
-  - RefData_KeyDevObjectRoleType
-  - KeyDev_FutureEventMkt
-  - KeyDev_FutureEventMktSplitInfo
-  - KeyDev_FutureEventMktToObjectToEventType
-  - RefData_AddressType
-  - KeyDev_KeyDevPlus
-  - KeyDev_KeyDevToObjectToEventType
-  - RefData_CharType
-  - RefData_CharTypeToSubType
-  - Professional_CompensationAdjustment
-  - Professional_CompensationDetail
+  - Professional_Compensation
+  - RefData_committee
+  - RefData_CompensationType
+  - Professional_Person
+  - Professional_BiographyPerson
+  - Professional_Professional
+  - Professional_ProfessionalCoverage
+  - RefData_ProFunction
+  - Professional_ProToProFunction
+
 stages:
-#- CLONE_TABLE
-#  - CLONE_STG_TABLE
+  # - CLONE_TABLE
+  #- CLONE_STG_TABLE
   - CLONE_VIEW
- - CREATE_MERGE_SP
-  - CREATE_PULL_SP
+  #  - CREATE_MERGE_SP
+  #- CREATE_PULL_SP
 
 code_replacements:
 - re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany_tbl\]?
