--- a/configs/launch_configs/launch_config_views.yml
+++ b/configs/launch_configs/launch_config_views.yml
@@ -1,16 +1,8 @@
 
 input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeedEngineMI2\dbo'
-output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases\DataFeedEngineMI'
+output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases'
 
 entities:
-  - AddtlCompany_Address
-  - AddtlCompany_BusinessDescription
-  - AddtlCompany_LongBusinessDescription
-  - CompanyBiteSize_CompanyBiteSize
-  - CompanyGeosOfInt_CompanyGeosOfInterest
-  - CompanyIndOfInt_CompanyIndustriesOfInterest
-  - CompanyStagesOfInt_CompanyStagesOfInterest
-  - GICS_GICS
   - KeyDev_FutureEvent
   - KeyDev_FutureEventToObjectToEventType
   - KeyDev_KeyDev
