--- a/configs/launch_configs/launch_config_views.yml
+++ b/configs/launch_configs/launch_config_views.yml
@@ -36,7 +36,7 @@ stages:
 code_replacements:
 - re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany_tbl\]?
   replace_to: dbo.Universe_Company2_tbl
-- re_replace_this: \bCIQDataSnapshot\.
+- re_replace_this: \bCIQDataSnapshot\b
   replace_to: CIQData.
 
 
