--- a/configs/launch_configs/launch_config.yml
+++ b/configs/launch_configs/launch_config.yml
@@ -4,56 +4,28 @@ input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeed
 output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases'
 
 entities:
-  - RefData_AlternateCompanyNameType
-  - RefData_BusinessRelSourceType
-  - RefData_BusinessRelType
-  - RefData_CharType
-  - RefData_CharTypeToSubType
-  - RefData_CompanyRelType
-  - RefData_CompetitorSourceType
-  - RefData_SecurityGroup
-  - RefData_IndexTradingItemType
-  - RefData_SecuritySubType
-  - RefData_TradingItemStatus
-  - Refdata_SecurityType
-  - RefData_SecurityFeature
-  - RefData_IndustryToSIC
-  - RefData_KeyDocumentExhibitTypeGroup
-  - RefData_KeyDocumentGroup
-  - RefData_KeyDocumentType
-  - RefData_Language
-  - RefData_PeopleBasic_ProFunction
-  - RefData_ProductSourceType
-  - RefData_SearchCompanyNameType
+  - RefData_Committee 
+  - CompanyRel_CompanyRel
+  - Competitors_Competitors
+  - Competitors_CompetitorToSource
+  - FinAuditor_FinancialToAdvisor
+  - BusinessRel_BusinessRel
+  - Product_Product
+  - KeyDocument_KeyDocument
+  - KeyDocument_KeyDocumentToSecurity
+  - PeopleBasic_Person
+  - PeopleBasic_Professional
+  - PeopleBasic_ProToProFunction
+  - CompanyNames_AlternateCompanyName
+  - CompanyNames_NativeCompanyNameV2
+  - CompanyNames_SearchCompanyName
 
 
-src_views_ents:  # for views have to create another set of names due to naming inconsistencies
-  - RefData_AlternateCompanyNameType
-  - RefData_BusinessRelSourceType
-  - RefData_BusinessRelType
-  - RefData_CharType
-  - RefData_CharTypeToSubType
-  - RefData_CompanyRelType
-  - RefData_CompetitorSourceType
-  - RefData_IDCSecurityGroup
-  - RefData_IDCSecurityIndexTradingItemType
-  - RefData_IDCSecuritySubType
-  - RefData_IDCSecurityTradingItemStatus
-  - RefData_IDCSecurityType
-  - RefData_IDCSecurityFeature
-  - RefData_IndustryToSIC
-  - RefData_KeyDocumentExhibitTypeGroup
-  - RefData_KeyDocumentGroup
-  - RefData_KeyDocumentType
-  - RefData_Language
-  - RefData_PeopleBasic_ProFunction
-  - RefData_ProductSourceType
-  - RefData_SearchCompanyNameType
-
+src_views_ents: []
 stages:
-   # - CLONE_TABLE
+  - CLONE_TABLE
   #- CLONE_STG_TABLE
- - CLONE_VIEW
+  # - CLONE_VIEW
   # - CREATE_MERGE_SP
   # - CREATE_DIRECT_MERGE_SP
   #- CREATE_PULL_SP
