--- a/configs/launch_configs/launch_config.yml
+++ b/configs/launch_configs/launch_config.yml
@@ -4,34 +4,37 @@ input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeed
 output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases'
 
 entities:
-  - RefData_Committee 
   - CompanyRel_CompanyRel
   - Competitors_Competitors
   - Competitors_CompetitorToSource
-  - FinAuditor_FinancialToAdvisor
-  - BusinessRel_BusinessRel
-  - Product_Product
-  - KeyDocument_KeyDocument
-  - KeyDocument_KeyDocumentToSecurity
+  - RefData_committee
   - PeopleBasic_Person
-  - PeopleBasic_Professional
   - PeopleBasic_ProToProFunction
   - CompanyNames_AlternateCompanyName
-  - CompanyNames_NativeCompanyNameV2
   - CompanyNames_SearchCompanyName
 
 
-src_views_ents: []
+
+src_views_ents: 
+  - CompanyRel_CompanyRel
+  - Competitors_Competitors
+  - Competitors_CompetitorToSource
+  - RefData_committee
+  - Professional_PeopleBasic_Person
+  - Professional_PeopleBasic_ProToProFunction
+  - CompanyNames_AlternateCompanyName
+  - CompanyNames_SearchCompanyName
+
 stages:
-  - CLONE_TABLE
-  #- CLONE_STG_TABLE
-  # - CLONE_VIEW
-  # - CREATE_MERGE_SP
+  #- CLONE_TABLE
+  # - CLONE_STG_TABLE
+  - CLONE_VIEW
+  - CREATE_MERGE_SP
   # - CREATE_DIRECT_MERGE_SP
-  #- CREATE_PULL_SP
+  - CREATE_PULL_SP
 
 code_replacements:
-- re_replace_this: \[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany\]?
+- re_replace_this: \b\[?(DatafeedEngine\]?|DatafeedEngineCache)\.\[?dbo\]?\.\[?Universe_DailyCompany\]?\b
   replace_to: dbo.Universe_Company2
 - re_replace_this: \bCIQDataSnapshot\b
   replace_to: CIQData
