--- a/configs/launch_configs/launch_config.yml
+++ b/configs/launch_configs/launch_config.yml
@@ -5,24 +5,16 @@ input_folder: 'C:\Users\dmitrii_kalmanovich\source\repos\DataFeedEngine\DataFeed
 output_folder: 'D:\Code\DatabaseBuild\Instances\DATAFEEDENGINE\Databases'
 
 entities:
-  - RefData_SecurityType
-  - RefData_SecurityGroup
-  - RefData_TradingItemStatus
-  - RefData_IndexTradingItemType
-  - RefData_SecurityFeature
-  - RefData_CharType
-  - RefData_CharTypeToSubType
-  - RefData_IndustryToSIC
-  - RefData_SecurityFeature
-
-src_views_ents: []
+  - Symbol_FTTickerSymbol
+src_views_ents: 
+  - Symbol_FTTicker
 
 stages:
   - CLONE_TABLE
-  # - CLONE_STG_TABLE
-  # - CLONE_VIEW
-  #- CREATE_PULL_SP
-  #- CREATE_MERGE_SP
+  - CLONE_STG_TABLE
+  - CLONE_VIEW
+  - CREATE_PULL_SP
+  - CREATE_MERGE_SP
   # - CREATE_DIRECT_MERGE_SP
 
 code_replacements:
